add feature lecturer-standards
