# apispecs/src/main/resources/openapi/openapi.yaml
@@ -590,6 +590,39 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/SubjectUpdateResponse'
+  /v1/lecturerStandards:
+    get:
+      tags:
+        - LecturerStandard
+      summary: Api for get Lecturer Standards
+      operationId: lecturerStandards
+      parameters:
+        - name: semester
+          required: true
+          in: query
+          schema:
+            type: number
+            description: Semester for get Lecturer Standards
+            example: 200
+            minimum: 190001
+            maximum: 299903
+      responses:
+        400:
+          $ref: '#/components/responses/webApiValidationError'
+        401:
+          $ref: '#/components/responses/401'
+        403:
+          $ref: '#/components/responses/403'
+        404:
+          $ref: '#/components/responses/404'
+        500:
+          $ref: '#/components/responses/500'
+        200:
+          description: Lecturer
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LecturerStandardsResponse'
   #    End here
 
 components:
@@ -1852,6 +1885,61 @@ components:
           description: Message of the update Subject
           type: string
           example: 'OK'
+    LecturerStandardsResponse:
+      type: object
+      properties:
+        status:
+          type: integer
+          format: int32
+          example: 200
+        results:
+          type: object
+          properties:
+            lecturerStandards:
+              description: Lecturer Standards list
+              type: array
+              items:
+                $ref: '#/components/schemas/LecturerStandardDetailResponse'
+    LecturerStandardDetailResponse:
+      type: object
+      properties:
+        id:
+          type: number
+          description: ID of Lecturer
+          example: 200
+        fullName:
+          type: string
+          description: Full Name of Lecturer
+          example: 'fullName'
+        images:
+          type: string
+          description: Images of Lecturer
+          example: 'images'
+        emailTdtu:
+          type: string
+          description: Email TDTU of Lecturer
+          example: 'emailTdtu'
+        isTeachingTheory:
+          type: boolean
+          description: Is Teaching Theory
+          example: true
+        isTeachingPractice:
+          type: boolean
+          description: Is Teaching Practice
+          example: true
+        isTeachingVietnamese:
+          type: boolean
+          description: Is Teaching Vietnamese
+          example: true
+        isTeachingEnglish:
+          type: boolean
+          description: Is Teaching English
+          example: true
+        isEnglishInternational:
+          type: boolean
+          description: Is English International
+          example: true
+
     #    End here
 
   responses:
